  * Fix build dependencies for test suite.
  * Support unversioned debian/ symlink in working tree when finding
    changelog and larstiq mode. LP: #619295
  * The deb: directory service has been renamed to apt: to avoid
    confusion.
  * When building with distribution set to UNRELEASED, it is now assumed
    the build is targetted at the same distribution as the build before.

 -- Jelmer Vernooij <jelmer@debian.org>  Sun, 27 Feb 2011 03:08:09 +0100

bzr-builddeb (2.6) unstable; urgency=low

  [ James Westby ]

  * Don't fail if asked to use a .bz2 tarball that is already in the desired
    location. LP: #616786
  * Don't crash if we are asked to merge-upstream with an unrelated branch.
    LP: #619614.
  * Don't strip -n from the version we get in merge-upstream, as some
    upstreams have this in there, and trying to support both means supporting
    both badly. If you are used to doing "bzr merge-upstream --version
    <package version>" then it will no longer work for you, use the
    upstream version instead.
  * Don't crash when doing merge-upstream with a branch that does a rename
    and then ships another file with the old path in the tarball that isn't
    in the branch.

  [ Jelmer Vernooij ]

  * Fix the auto-detection of merge mode.
  * Don't crash on merge mode packages where there is no export-upstream
    if we can't find the tarball.
  * Determine Bazaar home directory using bzrlib to prevent test
    isolation issues. LP: #614125

 -- James Westby <james.westby@ubuntu.com>  Wed, 18 Aug 2010 20:12:20 -0400

bzr-builddeb (2.5.1) unstable; urgency=low

  [ James Westby ]

  * Don't fail if asked to use a .bz2 tarball that is already in the desired
    location. LP: #616786
  * Don't crash if we are asked to merge-upstream with an unrelated branch.
    LP: #619614.
  * Don't strip -n from the version we get in merge-upstream, as some
    upstreams have this in there, and trying to support both means supporting